# claude-vibeline

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml  security.yml
scripts/: check_release.py
src/claude_vibeline/: __init__.py  __main__.py  args.py  constants.py  debug.py  display.py  effort.py  prompt_cache.py  refresh.py  schema.py  statusline.py  update.py  usage.py
tests/: test_debug.py  test_display.py  test_effort.py  test_prompt_cache.py  test_refresh.py  test_statusline.py  test_update.py
tests/integration/: test_statusline_pipeline.py
tests/unit/: test_args.py  test_debug.py  test_display.py  test_effort.py  test_prompt_cache.py  test_statusline.py  test_update.py  test_usage.py
